initial fix for non-wrapping citations/tooltips. closes #398

--- a/src/css/_citations.scss
+++ b/src/css/_citations.scss
@@ -4,8 +4,6 @@
 :global {
     .abt-citation {
         @include noselect;
-        display: inline-block;
-        white-space: nowrap;
         cursor: pointer;
         sup,
         sub {
